@@ -28,7 +28,7 @@ The Get handler deals with incoming requests to get data from a device. The foll
 * void *impl - The impldata pointer given as part of edgex_device_service.
 * edgex_addressable *devaddr - This provides information about the endpoint that this get request is seeking to access. Typically this is mapped to a device-specific client/connection etc.
 * uint32_t nreadings - The following requests and reading parameters are arrays of size nreadings.
-* edgex_device_commandrequest *requests - The deviceobject and resourceoperation supplied are pointers into the lists of such objects held in the relevant device profile. As such, each contains a "next" pointer. This should be ignored - each edgex_device_commandrequest describes only one operation. Here a device service would typically drill down to the attributes used to describe device resources, it would use these attributes to understand how to query the device for the requested data.
+* edgex_device_commandrequest *requests - The deviceresource and resourceoperation supplied are pointers into the lists of such objects held in the relevant device profile. As such, each contains a "next" pointer. This should be ignored - each edgex_device_commandrequest describes only one operation. Here a device service would typically drill down to the attributes used to describe device resources, it would use these attributes to understand how to query the device for the requested data.
 * edgex_device_coommandresult * readings - Once a reading has been taken from a device, the resulting value is placed into the readings. This is used by the SDK to return the result to EdgeX. If a reading is of String or Binary type, memory ownership is taken by the SDK.
 
 In general the GET handler should implement a translation between a GET request from edgex and a read/get via the protocol-specific mechanism. Multiple sources of metadata are provided to allow the device-service to identify what it should query on receipt of the callback.
